Changed margins and padding for ul.pageerror so that the list of error messages looks about the same in IE. Also created a separate div for pageoverflow for the error messages, to avoid the width of the error message to exceed 100% of the page width.
git-svn-id: http://svn.cmsmadesimple.org/svn/cmsmadesimple/trunk@3014 3d254a34-79dc-0310-9e5f-be208747d8a0

--- a/admin/themes/default/css/style.css
+++ b/admin/themes/default/css/style.css
@@ -727,11 +727,17 @@ textarea.pageheadtags  {
    }
 
 ul.pageerror  {
-   margin: 0px;
+   margin: 5px 0 10px 0;
+   padding-left: 10px;
    }
 ul.pageerror li {
+	padding-left: 5px;
+	margin-left: 15px;
    list-style-image: url("themes/default/images/icons/system/stop.gif");
    }
+div.pageerrorcontainer a {
+	color: #fff;
+	}
 .clearb  {
    clear: both;
    }
